--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "eslint": "^8.53.0",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
