--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
-    "axios": "^1.6.2",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.2",
+    "jest-fetch-mock": "^3.0.3",
     "netlify-cli": "^17.17.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.9.1",
@@ -37,6 +38,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.20",
+    "axios-mock-adapter": "^2.1.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.53.0",
     "eslint-plugin-jest": "^28.9.0",
